--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,8 @@
         <module>eureka_server_15000</module>
         <module>client_management_consumer_17000</module>
         <module>client_management_provider_16000</module>
-
+        <module>sales_log_provider_server_12000</module>
+        <module>login_server_18000</module>
     </modules>
 
     <packaging>pom</packaging>
