--- a/client_management_provider_16000/src/main/resources/application.properties
+++ b/client_management_provider_16000/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.datasource.password=123456
 
 logging.level.com.example.client_management_consumer_17000.mybatisplus=DEBUG
 
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器地址
+spring.redis.host=8.140.46.173
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器连接密码（默认为空）
+spring.redis.password=99%0821@pj*CQ
 
 #eureka.client.service-url.defaultZone=http://127.0.0.1:15000/eureka
 #
