--- a/chance_provider_server_14000/src/main/resources/application.properties
+++ b/chance_provider_server_14000/src/main/resources/application.properties
@@ -27,3 +27,13 @@ logging.level.com.neusoft.npms=DEBUG
 
 #xml中可以只写 类名
 mybatis-plus.type-aliases-package=com.neusoft.npms.entity, com.neusoft.npms.dto
+
+# -----------------------------redis-----------------------------
+# Redis服务器连接端口
+spring.redis.port=6666
+# Redis服务器地址
+spring.redis.host=39.106.82.211
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器连接密码（默认为空）
+spring.redis.password=8461e2c92b2848975c058cb4fbba735f
