--- a/client_management_provider_16000/src/main/resources/application.properties
+++ b/client_management_provider_16000/src/main/resources/application.properties
@@ -8,14 +8,15 @@ spring.datasource.password=123456
 
 logging.level.com.example.client_management_consumer_17000.mybatisplus=DEBUG
 
+# -----------------------------redis-----------------------------
 # Redis服务器连接端口
-spring.redis.port=6379
+spring.redis.port=6666
 # Redis服务器地址
-spring.redis.host=8.140.46.173
+spring.redis.host=39.106.82.211
 # Redis数据库索引（默认为0）
 spring.redis.database=0
 # Redis服务器连接密码（默认为空）
-spring.redis.password=99%0821@pj*CQ
+spring.redis.password=8461e2c92b2848975c058cb4fbba735f
 
 #eureka.client.service-url.defaultZone=http://127.0.0.1:15000/eureka
 #
