--- a/chance_provider_server_14000/pom.xml
+++ b/chance_provider_server_14000/pom.xml
@@ -107,6 +107,14 @@
                 </executions>
 
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
