--- a/chance_trace_log_management_19000/pom.xml
+++ b/chance_trace_log_management_19000/pom.xml
@@ -86,6 +86,10 @@
             <artifactId>velocity-engine-core</artifactId>
             <version>2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.baomidou</groupId>
