--- a/client_management_provider_16000/src/main/resources/application.properties
+++ b/client_management_provider_16000/src/main/resources/application.properties
@@ -1,33 +1,32 @@
-server.port=16000
-spring.application.name=provider-server
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://47.98.166.180:3306/npms?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=123456
-
-logging.level.com.example.client_management_consumer_17000.mybatisplus=DEBUG
-
-# -----------------------------redis-----------------------------
-# Redis服务器连接端口
-spring.redis.port=6666
-# Redis服务器地址
-spring.redis.host=39.106.82.211
-# Redis数据库索引（默认为0）
-spring.redis.database=0
-# Redis服务器连接密码（默认为空）
-spring.redis.password=8461e2c92b2848975c058cb4fbba735f
-
-#eureka.client.service-url.defaultZone=http://127.0.0.1:15000/eureka
+#server.port=16000
+#spring.application.name=provider-server
 #
-##eureka.client.service-url.defaultZone=http://eurekaServer15000:15000/eureka/
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://47.98.166.180:3306/npms?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+#spring.datasource.username=root
+#spring.datasource.password=123456
 #
-## 当调用getHostname获取实例的hostname时，返回ip而不是host名称
-#eureka.client.service-url.instance.prefer-ip-address=true
-## 指定自己的ip信息，不指定的话会自己寻找
-#eureka.client.service-url.instance.ip-address=127.0.0.1
+#logging.level.com.example.client_management_consumer_17000.mybatisplus=DEBUG
+#
+## Redis服务器连接端口
+#spring.redis.port=6379
+## Redis服务器地址
+#spring.redis.host=8.140.46.173
+## Redis数据库索引（默认为0）
+#spring.redis.database=0
+## Redis服务器连接密码（默认为空）
+#spring.redis.password=99%0821@pj*CQ
+#
+##eureka.client.service-url.defaultZone=http://127.0.0.1:15000/eureka
 ##
-##eureka配置
-#eureka.instance.prefer-ip-address=true
-##上面的配置已经可以使用ip注册了，但显示的还是主机名，所以这里设置显示的注册名
-#eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
+###eureka.client.service-url.defaultZone=http://eurekaServer15000:15000/eureka/
+##
+### 当调用getHostname获取实例的hostname时，返回ip而不是host名称
+##eureka.client.service-url.instance.prefer-ip-address=true
+### 指定自己的ip信息，不指定的话会自己寻找
+##eureka.client.service-url.instance.ip-address=127.0.0.1
+###
+###eureka配置
+##eureka.instance.prefer-ip-address=true
+###上面的配置已经可以使用ip注册了，但显示的还是主机名，所以这里设置显示的注册名
+##eureka.instance.instance-id=${spring.cloud.client.ip-address}:${server.port}
