--- a/client_management_provider_16000/src/main/resources/application.yml
+++ b/client_management_provider_16000/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 19000
+  port: 16000
 
 spring:
   application:
-    name: nacos-chance-trace-log-service
+    name: nacos-client-management-service
 
   cloud:
     nacos:
@@ -17,11 +17,11 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   redis:
-    port: 6379
+    port: 6666
     # Redis服务器连接端口
-    host: 8.140.46.173
+    host: 39.106.82.211
     # Redis服务器地址
     database: 0
     # Redis数据库索引（默认为0）
-    password: 99%0821@pj*CQ
+    password: 8461e2c92b2848975c058cb4fbba735f
     # Redis服务器连接密码（默认为空）
