--- a/chance_provider_server_14000/src/main/resources/application.properties
+++ b/chance_provider_server_14000/src/main/resources/application.properties
@@ -37,3 +37,6 @@ spring.redis.host=39.106.82.211
 spring.redis.database=0
 # Redis服务器连接密码（默认为空）
 spring.redis.password=8461e2c92b2848975c058cb4fbba735f
+
+# -----------------------------nacos-----------------------------
+spring.cloud.nacos.discovery.server-addr = 8.140.46.173:8848
