--- a/client_management_provider_16000/src/main/resources/application.yml
+++ b/client_management_provider_16000/src/main/resources/application.yml
@@ -25,3 +25,7 @@ spring:
     # Redis数据库索引（默认为0）
     password: 8461e2c92b2848975c058cb4fbba735f
     # Redis服务器连接密码（默认为空）
+
+logging:
+  level:
+    com.example : DEBUG
