--- a/micro-oauth2-api/src/main/resources/application.yml
+++ b/micro-oauth2-api/src/main/resources/application.yml
@@ -9,6 +9,11 @@ spring:
     nacos:
       discovery:
         server-addr: 8.140.46.173:8848
+  datasource:
+    url: jdbc:mysql://47.98.166.180:3306/npms?characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    username: root
+    password: 123456
+    driver-class-name: com.mysql.cj.jdbc.Driver
 management:
   endpoints:
     web:
