傻逼跨域跨不过去

--- a/micro-oauth2-gateway/src/main/resources/application.yml
+++ b/micro-oauth2-gateway/src/main/resources/application.yml
@@ -39,8 +39,8 @@ spring:
             allowedMethods: "*"
             # 允许跨域请求里的head字段，设置*为全部
             allowedHeaders: "*"
-#      default-filters:
-#        - DedupeResponseHeader=Access-Control-Allow-Origin, RETAIN_UNIQUE
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin, RETAIN_UNIQUE
 
   security:
     oauth2:
