--- a/sales_log_provider_server_12000/pom.xml
+++ b/sales_log_provider_server_12000/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>sales_log_provider_server_12000</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
